--- a/RodriguezSnapchat/Base.lproj/Main.storyboard
+++ b/RodriguezSnapchat/Base.lproj/Main.storyboard
@@ -110,8 +110,20 @@
                     <view key="view" contentMode="scaleToFill" id="ZWr-ac-XlR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4lZ-jY-2jb">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vJS-F0-zD5"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vJS-F0-zD5" firstAttribute="bottom" secondItem="4lZ-jY-2jb" secondAttribute="bottom" id="HNN-GW-H2M"/>
+                            <constraint firstItem="4lZ-jY-2jb" firstAttribute="leading" secondItem="vJS-F0-zD5" secondAttribute="leading" id="Ouc-J8-ZDi"/>
+                            <constraint firstItem="vJS-F0-zD5" firstAttribute="trailing" secondItem="4lZ-jY-2jb" secondAttribute="trailing" id="VQ8-p9-tXr"/>
+                            <constraint firstItem="4lZ-jY-2jb" firstAttribute="top" secondItem="vJS-F0-zD5" secondAttribute="top" id="ekV-lL-MU0"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="X70-f7-cD1">
                         <barButtonItem key="leftBarButtonItem" title="Cerrar Sesión" id="CxI-gA-5Gz">
@@ -125,10 +137,54 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tablaSnaps" destination="4lZ-jY-2jb" id="sBg-Yj-dqc"/>
+                        <segue destination="TTB-SI-CIH" kind="show" identifier="versnapsegue" id="QXm-Gg-ios"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mvw-QQ-g2s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1561" y="108"/>
+        </scene>
+        <!--Ver Snap View Controller-->
+        <scene sceneID="Q7Q-2a-gf2">
+            <objects>
+                <viewController id="TTB-SI-CIH" customClass="VerSnapViewController" customModule="RodriguezSnapchat" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Asl-cN-39q">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mensaje:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2sl-dw-cnG">
+                                <rect key="frame" x="20" y="115" width="69" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Emagen Enviada:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fRX-qp-if1">
+                                <rect key="frame" x="20" y="175" width="130" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6WO-hX-XT4">
+                                <rect key="frame" x="26" y="230" width="368" height="207"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="OUP-HQ-iCX"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="zBl-Kn-pO4"/>
+                    <connections>
+                        <outlet property="imageView" destination="6WO-hX-XT4" id="sbK-Nx-Ihk"/>
+                        <outlet property="lblMensaje" destination="2sl-dw-cnG" id="u50-XF-Nn5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C6L-ng-kUd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1560.8695652173915" y="844.41964285714278"/>
         </scene>
         <!--Enviar Mensaje-->
         <scene sceneID="62h-eE-zWq">
@@ -182,14 +238,22 @@
                             <constraint firstItem="YK5-Ei-G9G" firstAttribute="centerX" secondItem="S3g-Le-Mia" secondAttribute="centerX" id="AI8-1j-DhT"/>
                             <constraint firstItem="prq-GU-CsO" firstAttribute="centerX" secondItem="S3g-Le-Mia" secondAttribute="centerX" id="PM3-mW-Aid"/>
                             <constraint firstItem="prq-GU-CsO" firstAttribute="centerX" secondItem="S3g-Le-Mia" secondAttribute="centerX" id="XtW-q5-5YK"/>
+                            <constraint firstItem="prq-GU-CsO" firstAttribute="centerX" secondItem="S3g-Le-Mia" secondAttribute="centerX" id="gnI-BS-eis"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Enviar Mensaje" id="ej7-3O-1lx">
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="camera" catalog="system" id="PRC-zy-Pk1">
-                            <connections>
-                                <action selector="camaraTapped:" destination="hWe-lq-Gfk" id="ryJ-Yk-yMJ"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem title="Item" image="camera" catalog="system" id="PRC-zy-Pk1">
+                                <connections>
+                                    <action selector="camaraTapped:" destination="hWe-lq-Gfk" id="ryJ-Yk-yMJ"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="organize" id="dZj-qL-wfU">
+                                <connections>
+                                    <action selector="mediaTapped:" destination="hWe-lq-Gfk" id="VQ1-a8-QIe"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="descripcionTextField" destination="YK5-Ei-G9G" id="VdG-u4-NOC"/>
